--- a/index.html
+++ b/index.html
@@ -7,40 +7,28 @@
     <title>Calculator</title>
 </head>
 <body>
-    <h1>Calculator</h1>
-    <table id="calculator"> 
-        <tr> 
-            <td colspan="3"> 
-                <input type="text" id="result"> 
-            </td> 
-            <td><input type="button" value="c"></td> 
-        </tr> 
-  
-        <tr> 
-            <td><input type="button" value="1"></td> 
-            <td><input type="button" value="2"></td> 
-            <td><input type="button" value="3"></td> 
-            <td><input type="button" value="/"></td> 
-        </tr> 
-        <tr> 
-            <td><input type="button" value="4"></td> 
-            <td><input type="button" value="5"></td> 
-            <td><input type="button" value="6"></td> 
-            <td><input type="button" value="*"></td> 
-        </tr> 
-        <tr> 
-            <td><input type="button" value="7"></td> 
-            <td><input type="button" value="8"></td> 
-            <td><input type="button" value="9"></td> 
-            <td><input type="button" value="-"></td> 
-        </tr> 
-        <tr> 
-            <td><input type="button" value="0"></td> 
-            <td><input type="button" value="."></td> 
-            <td><input type="button" value="="></td> 
-            <td><input type="button" value="+"></td> 
-        </tr> 
-    </table>
+    <div class="container">
+        <input type="text" class="input">
+        <button class="grid-item">1</button>
+        <button class="grid-item">2</button>
+        <button class="grid-item">3</button>
+        <button class="grid-item">4</button>
+        <button class="grid-item">5</button>
+        <button class="grid-item">6</button>
+        <button class="grid-item">7</button>
+        <button class="grid-item">8</button>
+        <button class="grid-item">9</button>
+        <button class="grid-item">0</button>
+        <button class="grid-item">+</button>
+        <button class="grid-item">-</button>
+        <button class="grid-item">*</button>
+        <button class="grid-item">/</button>
+        <button class="grid-item">%</button>
+        <button class="grid-item">C</button>
+        <button class="grid-item">=</button>
+        <button class="grid-item">Delete</button>
+    </div>
 </body>
 <script src="./main.js"></script>
 </html>
+    
