--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 <body>
     <div class="container">
         <input type="text" class="input">
-        <button class="grid-item">1</button>
-        <button class="grid-item">2</button>
-        <button class="grid-item">3</button>
-        <button class="grid-item">4</button>
-        <button class="grid-item">5</button>
-        <button class="grid-item">6</button>
-        <button class="grid-item">7</button>
-        <button class="grid-item">8</button>
-        <button class="grid-item">9</button>
-        <button class="grid-item">0</button>
-        <button class="grid-item">+</button>
-        <button class="grid-item">-</button>
-        <button class="grid-item">*</button>
-        <button class="grid-item">/</button>
-        <button class="grid-item">%</button>
+        <button class="grid-item" id="numberButton">1</button>
+        <button class="grid-item" id="numberButton">2</button>
+        <button class="grid-item" id="numberButton">3</button>
+        <button class="grid-item" id="numberButton">4</button>
+        <button class="grid-item" id="numberButton">5</button>
+        <button class="grid-item" id="numberButton">6</button>
+        <button class="grid-item" id="numberButton">7</button>
+        <button class="grid-item" id="numberButton">8</button>
+        <button class="grid-item" id="numberButton">9</button>
+        <button class="grid-item" id="numberButton">0</button>
+        <button class="grid-item" id="numberButton">+</button>
+        <button class="grid-item" id="numberButton">-</button>
+        <button class="grid-item" id="numberButton">*</button>
+        <button class="grid-item" id="numberButton">/</button>
+        <button class="grid-item" id="numberButton">%</button>
         <button class="grid-item">C</button>
-        <button class="grid-item">=</button>
+        <button class="grid-item" id="equal">=</button>
         <button class="grid-item">Delete</button>
     </div>
 </body>
