adding links to my github profile

--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/x-icon" href="./favicon.io.png">
     <title>Calculator</title>
 </head>
+
 <body>
     <div class="container">
         <input type="text" class="input">
-        <button class="grid-item" id="numberButton">1</button>
-        <button class="grid-item" id="numberButton">2</button>
-        <button class="grid-item" id="numberButton">3</button>
-        <button class="grid-item" id="numberButton">4</button>
-        <button class="grid-item" id="numberButton">5</button>
-        <button class="grid-item" id="numberButton">6</button>
-        <button class="grid-item" id="numberButton">7</button>
-        <button class="grid-item" id="numberButton">8</button>
-        <button class="grid-item" id="numberButton">9</button>
-        <button class="grid-item" id="numberButton">0</button>
-        <button class="grid-item" id="numberButton">+</button>
-        <button class="grid-item" id="numberButton">-</button>
-        <button class="grid-item" id="numberButton">*</button>
-        <button class="grid-item" id="numberButton">/</button>
-        <button class="grid-item" id="numberButton">%</button>
-        <button class="grid-item">C</button>
-        <button class="grid-item" id="equal">=</button>
-        <button class="grid-item">Delete</button>
+        <button class="grid-item" id="clear">AC</button>
+        <button class="grid-item" id="delete">DEL</button>
+        <button class="grid-item numberButton">-</button>
+        <button class="grid-item numberButton">+</button>
+        <button class="grid-item numberButton">1</button>
+        <button class="grid-item numberButton">2</button>
+        <button class="grid-item numberButton">3</button>
+        <button class="grid-item numberButton">/</button>
+        <button class="grid-item numberButton">4</button>
+        <button class="grid-item numberButton">5</button>
+        <button class="grid-item numberButton">6</button>
+        <button class="grid-item numberButton">*</button>
+        <button class="grid-item numberButton">7</button>
+        <button class="grid-item numberButton">8</button>
+        <button class="grid-item numberButton">9</button>
+        <button class="grid-item numberButton">.</button>
+        <button class="grid-item numberButton">0</button>
+        <button class="grid-item equal" id="equal">=</button>
     </div>
+    <footer>
+        <a href="https://github.com/suleman42244/Calculator" class="source">Source Code</a> |
+        <a href="https://github.com/suleman42244" class="profile">Suleman Khalil</a>
+    </footer>
 </body>
 <script src="./main.js"></script>
+
 </html>
-    
